--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.9.1",
+    "@rainbow-me/rainbowkit": "^0.7.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
-    "ethers": "^5.6.4",
+    "ethers": "^5.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "wagmi": "^0.6.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
